# speare

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy-book.yaml
book/: book.toml
book/src/: SUMMARY.md  communication.md  concurrency_patterns.md  handlers.md  intro.md  lifecycle_and_supervision.md  lifecycle_management.md  process_lifecycle.md  pub_sub.md  pubsub.md  reply.md  service_discovery.md  spawning_a_process.md  supervision.md  testing.md  the_actor.md  what_is_a_process.md  wroking_with_processes.md
core/: Cargo.toml  README.md
core/src/: exit.rs  lib.rs  node.rs  process.rs  req_res.rs  stream.rs  supervision.rs
core/tests/: deferred.rs  events.rs  exit.rs  handle_send.rs  integration_test.rs  lifetime_deps.rs  race.rs  root_process_stops_children.rs  source.rs  stream.rs  supervision.rs  sync_vec.rs  tasks.rs  when_errors.rs
scratch/: Cargo.toml
scratch/src/: main.rs
simple/: Cargo.toml
simple/src/: lib.rs  main.rs
speare/: Cargo.toml
speare/src/: exit.rs  lib.rs  node.rs  pubsub.rs  req_res.rs  streams.rs  supervision.rs  watch.rs
speare/src/mini/: mod.rs
speare/tests/: backoff.rs  beam_patterns.rs  clear_mailbox.rs  handle_restart.rs  handle_send.rs  handle_send_in.rs  intervals.rs  lifetime_deps.rs  mini.rs  node_shutdown.rs  pubsub.rs  registry.rs  req_res.rs  restart_children.rs  root_process_stops_children.rs  streams.rs  supervision.rs  sync_vec.rs  tasks.rs  watch.rs  when_errors.rs
speare_macro/: Cargo.toml  README.md
speare_macro/src/: lib.rs
