[package]
name = "speare"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "actor-like thin abstraction over tokio::task and flume channels"
homepage = "https://github.com/vmenge/speare"
repository = "https://github.com/vmenge/speare"
readme = "../README.md"

[dependencies]
async-trait = { version = "0.1.73" }
flume = "0.11.0"
tokio = { version = "1.35.1", features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = [
    "macros",
    "rt",
    "sync",
    "time",
    "test-util",
] }
derive_more = "0.99.17"
