[package]
name = "scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speare = { path = "../core" }
tokio = { version = "1.32.0", features = [
    "macros",
    "rt",
    "sync",
    "time",
    "rt-multi-thread",
] }
anyhow = { version = "1.0.75" }
