[package]
name = "simple"
version = "0.0.12"
edition = "2021"
license = "MIT"
description = "a simple actor + eventbus lib"
homepage = "https://github.com/vmenge/speare"
repository = "https://github.com/vmenge/speare"
readme = "../README.md"

[dependencies]
async-trait = { version = "0.1.73" }
flume = "0.11.0"
tokio = { version = "1.32.0", features = [
    "macros",
    "rt",
    "sync",
    "time",
    "rt-multi-thread",
] }
